--- a/Site/Presentation/Views/Season/Partial/PrintFooter.cshtml
+++ b/Site/Presentation/Views/Season/Partial/PrintFooter.cshtml
@@ -1,10 +1,5 @@
-﻿@model Presentation.Helpers.Footer
-
-@for (var i = 0; i < Model.Breaks; i++)
-{
-	<br />
-}
+﻿@model Int32
 
 <div class="just-print footer">
-	<span>@Model.Page</span>
+	<span>@Model</span>
 </div>
