[SITE] print: fix first header

--- a/Site/Presentation/Assets/css/print_Print.css
+++ b/Site/Presentation/Assets/css/print_Print.css
@@ -145,6 +145,11 @@ img,
 	margin-top: 0;
 }
 
+.block:first-child .paragraph:first-child .header .title
+{
+	display: none;
+}
+
 @page
 {
 	margin-top: 1.3cm;
