[SITE] season: add name

--- a/Site/Presentation/Assets/css/screen_Main.css
+++ b/Site/Presentation/Assets/css/screen_Main.css
@@ -11,8 +11,14 @@
 		color: #800;
 	}
 
+	.main p.title small {
+		color: #844;
+		text-transform: none;
+	}
+
 	.main p.title .sub {
 		display: block;
+		font-size: 90%;
 	}
 
 .paragraph
