--- a/Site/Presentation/Views/Season/Summary.cshtml
+++ b/Site/Presentation/Views/Season/Summary.cshtml
@@ -7,7 +7,8 @@
 }
 
 <p class="title">
-	Temporada @Model.Season
+	<small>Temporada @Model.Season</small><br />
+	@Model.Season.Name
 	<span class="sub">Resumo</span>
 </p>
 
