[SITE] pages: start calculations
missing map all characters+styles and finish page calculation after
lines calculated

--- a/Site/Presentation/Views/Season/Episode.cshtml
+++ b/Site/Presentation/Views/Season/Episode.cshtml
@@ -27,6 +27,13 @@
 <!--
 <div class="header-aligner"></div>
 <div class="footer-aligner"></div>
+
+@for (var g = 0; g < 36; g++)
+{
+	<div class="grid just-print" style="width: @(g * 5)px">
+		@(g > 0 && g % 2 == 0 ? (g/2).ToString() : "")
+	</div>
+}
 -->
 
 <p class="title">
