--- a/Site/Presentation/Views/Season/Episode.cshtml
+++ b/Site/Presentation/Views/Season/Episode.cshtml
@@ -31,7 +31,7 @@
 @for (var g = 0; g < 62; g++)
 {
 	<div class="grid just-print" style="width: @(g * 5)px">
-		@(g > 0 && g % 2 == 0 ? (g/2).ToString() : "")
+		@(g > 0 && g % 4 == 0 ? (g/4).ToString() : "")
 	</div>
 }
 -->
@@ -58,24 +58,37 @@
 		: 0;
 	var lastPage = page;
 	page++;
+
+	var line = 0;
 }
 
 <div class="blocks">
-	@for (var s = 0; s <= lastBlock; s++)
+	@for (var b = 0; b <= lastBlock; b++)
 	{
-		var block = Model.Story.BlockList[s];
+		var block = Model.Story.BlockList[b];
 		var trigger = false;
 
-		<div class="block @if (block.ID == Model.ReadingBlock) { @("reading") }" id="Block@(s)">
-			@foreach (var paragraph in block.ParagraphTypeList)
+		<div class="block @if (block.ID == Model.ReadingBlock) { @("reading") }" id="Block@(b)">
+			@for (var pt = 0; pt < block.ParagraphTypeList.Count; pt++)
 			{
+				var paragraph = block.ParagraphTypeList[pt];
 				var type = paragraph.ToString().ToLower();
 				var showTrigger = trigger ? "trigger-hidden" : "";
 				var pageBreak = lastPage != page ? "break" : "";
 				var style = page % 2 == 0 ? "even" : "odd";
 				var pageItem = $"page-{style}-item";
 
-				<div class="paragraph @type @showTrigger @pageBreak @pageItem">
+				var next = Model.Story.GlobalParagraphType(block, pt + 1);
+				var lastOnPage = next == ParagraphType.Page
+					? "last-on-page"
+					: null;
+
+				if (paragraph != ParagraphType.Page)
+				{
+					line++;
+				}
+
+				<div class="paragraph @type @showTrigger @pageBreak @pageItem @lastOnPage">
 					@if (lastPage != page)
 					{
 						@Html.Partial("Partial/PrintHeader", Model.Story)
@@ -87,18 +100,20 @@
 					{
 						case ParagraphType.Talk:
 						{
+							var talk = block.TalkList[talkCounter];
+
 							<span class="debug">
-								@($"L: {block.TalkList[talkCounter].DebugLines}")<br/>
-								@($"C: {String.Join(" + ", block.TalkList[talkCounter].DebugCharacter)}")<br/>
+								@($"L{line}: {talk.DebugLines}")<br/>
+								@($"C: {String.Join(" + ", talk.DebugCharacter)}")<br/>
 							</span>
 
 							@("– ")
 
-							var paragraphId = s + "_" + tellerCounter + "_" + talkCounter;
+							var paragraphId = b + "_" + tellerCounter + "_" + talkCounter;
 
-							for (var p = 0; p < block.TalkList[talkCounter].Pieces.Count; p++)
+							for (var p = 0; p < talk.Pieces.Count; p++)
 							{
-								var piece = block.TalkList[talkCounter].Pieces[p];
+								var piece = talk.Pieces[p];
 								var pieceId = paragraphId + "_" + p;
 
 								var title = piece.Style == TalkStyle.Default
@@ -127,7 +142,7 @@
 								}
 							}
 
-							@(" (" + block.TalkList[talkCounter].Character + ")")
+							@(" (" + talk.Character + ")")
 
 							talkCounter++;
 
@@ -136,11 +151,13 @@
 
 						case ParagraphType.Teller:
 						{
+							var teller = block.TellerList[tellerCounter];
+
 							<span class="debug">
-								@($"L: {block.TellerList[tellerCounter].DebugLines}")<br/>
+								@($"L{line}: {teller.DebugLines}")<br/>
 							</span>
 
-							foreach (var piece in block.TellerList[tellerCounter].Pieces)
+							foreach (var piece in teller.Pieces)
 							{
 								<span class="debug">
 									@($"[{String.Join(" + ", piece.DebugWords)}]")
@@ -188,7 +205,7 @@
 				</div>
 			}
 
-			@if (s == lastBlock && Model.Story.LastBlock != block.ID)
+			@if (b == lastBlock && Model.Story.LastBlock != block.ID)
 			{
 				<div class="continue">Continua...</div>
 			}
