[SITE] print: hide book link

--- a/Site/Presentation/Views/Season/Episode.cshtml
+++ b/Site/Presentation/Views/Season/Episode.cshtml
@@ -224,5 +224,5 @@
 
 @if (Model.Story.Link != null)
 {
-	<a class="book-link" href="@Model.Story.Link" target="_blank">&#x1F56E;</a>
+	<a class="book-link screen-action" href="@Model.Story.Link" target="_blank">&#x1F56E;</a>
 }
