[SITE] print: add option with 4xA6 at A4

--- a/Site/Presentation/Views/Shared/Partial/Css.cshtml
+++ b/Site/Presentation/Views/Shared/Partial/Css.cshtml
@@ -8,4 +8,9 @@
 		<link href="@Url.Content("~/Assets/css/" + file.Name)?v=@Version.Name"
 		      rel="stylesheet" type="text/css" media="@file.Media" />
 	}
+
+	if (Request["Print"] == "Local") {
+		<link href="@Url.Content("~/Assets/css/print_Local.css")?v=@Version.Name"
+		      rel="stylesheet" type="text/css" media="print" />
+	}
 }
