[SITE] Fix linux details

--- a/Site/Presentation/Views/Shared/Partial/Css.cshtml
+++ b/Site/Presentation/Views/Shared/Partial/Css.cshtml
@@ -1,5 +1,4 @@
-﻿@using Version = Structure.Helpers.Version
-@using Structure.Helpers
+﻿@using Structure.Helpers
 
 @model Presentation.Models.General.CssModel
 		   
