--- a/Site/Presentation/Views/Shared/Partial/Js.cshtml
+++ b/Site/Presentation/Views/Shared/Partial/Js.cshtml
@@ -1,5 +1,4 @@
-﻿@using Version = Structure.Helpers.Version
-@using Structure.Helpers
+﻿@using Structure.Helpers
 
 <script src="@Url.Content("~/Assets/js/lib/jquery-1.6.1.min.js")?v=@Config.Version" type="text/javascript"></script>
 <script src="@Url.Content("~/Assets/js/lib/jquery.validate.min.js")?v=@Config.Version" type="text/javascript"></script>
