--- a/site/Presentation/Assets/css/screen_Main.css
+++ b/site/Presentation/Assets/css/screen_Main.css
@@ -50,13 +50,13 @@ form .paragraph
 	width: 100px;
 	height: 70px;
 	background: #111;
-	border: 3px ridge #600;
+	border: 3px ridge #60C;
 	border-radius: 5px;
 	text-align: center;
 	filter: alpha(opacity=90);
 	opacity: 0.90;
 	font-family: wingdings;
-	color: #C33;
+	color: #93F;
 	text-decoration: none;
 	font-size: 50px;
 	margin: 20px;
