site: replace png background by gif

--- a/site/Presentation/Assets/css/screen_Back.css
+++ b/site/Presentation/Assets/css/screen_Back.css
@@ -1,6 +1,6 @@
 ﻿body {
 	background: #000 no-repeat fixed center center
-		url("/Assets/images/fundo.png");
+		url("/Assets/images/fundo.gif");
 }
 
 .darkback
