--- a/site/Presentation/Views/Season/Episode.cshtml
+++ b/site/Presentation/Views/Season/Episode.cshtml
@@ -59,6 +59,7 @@
 	page++;
 
 	var line = 0;
+	var lastType = ParagraphType.Page;
 }
 
 <div class="blocks">
@@ -67,7 +68,11 @@
 		var block = Model.Story.BlockList[b];
 		var trigger = false;
 
-		<div class="block @if (block.ID == Model.ReadingBlock) { @("reading") }" id="Block@(b)">
+		var reading = (block.ID == Model.ReadingBlock) ? "reading" : "";
+
+		var pageStart = (lastType == ParagraphType.Page) ? "page-start" : "";
+
+		<div class="block @reading @pageStart" id="Block@(b)">
 			@for (var pt = 0; pt < block.ParagraphTypeList.Count; pt++)
 			{
 				var paragraph = block.ParagraphTypeList[pt];
@@ -202,6 +207,8 @@
 							throw new NotImplementedException();
 					}
 				</div>
+
+				lastType = paragraph;
 			}
 
 			@if (b == lastBlock && Model.Story.LastBlock != block.ID)
