--- a/site/Presentation/Views/Season/Partial/PrintSummary.cshtml
+++ b/site/Presentation/Views/Season/Partial/PrintSummary.cshtml
@@ -6,11 +6,20 @@
 {
 	var storyPages = Model.BlockList.Sum(b => b.PageCount) + 1;
 	var page = storyPages + 1;
-	var style = page % 2 == 0 ? "even" : "odd";
-	var pageItem = $"page-{style}-item";
 
-	<div class="just-print summary @pageItem">
+	if (page % 2 == 0)
+	{
+		<div class="just-print empty page-even-item">
+			@await Html.PartialAsync("Partial/PrintHeader", Model)
+			@await Html.PartialAsync("Partial/PrintFooter", page)
 
+			Esta página está vazia para que o resumo fique em uma página ímpar.
+		</div>
+
+		page++;
+	}
+
+	<div class="just-print summary page-odd-item">
 		@await Html.PartialAsync("Partial/PrintHeader", Model)
 		@await Html.PartialAsync("Partial/PrintFooter", page)
 
