site: add bio link to first page

--- a/site/Presentation/Views/Season/Intro.cshtml
+++ b/site/Presentation/Views/Season/Intro.cshtml
@@ -21,9 +21,15 @@
 	<p>
 		Esta é a história de um amontoado de átomos ao acaso tentando voltar a ser.
 	</p>
-	
+
 	<p class="start-reading">
 		<a href="@route">Começar a ler</a>
 	</p>
 
 </div>
+
+<a class="book-link screen-action"
+		href="https://uiclap.bio/darakeon"
+		target="_blank">
+	&#x1F56E;
+</a>
