--- a/site/Presentation/Views/Season/Author/Episode.cshtml
+++ b/site/Presentation/Views/Season/Author/Episode.cshtml
@@ -61,6 +61,7 @@
 
 				<br />
 
+				@Html.TextAreaFor(m => m.Story.Synopsis)
 				@Html.TextAreaFor(m => m.Story.Summary)
 
 				@Html.TextBoxFor(m => m.Story.Breaks)
