--- a/site/Presentation/Assets/css/Main.css
+++ b/site/Presentation/Assets/css/Main.css
@@ -64,8 +64,7 @@
 	filter: alpha(opacity=95);
 	opacity: 0.95;
 	position: fixed;
-	display: block;
-	width: 100%;
+	height: 100%;
 	top: 0;
 	left: 0;
 	z-index: 99;
