site: add description to buy link

--- a/site/Presentation/Views/Season/Intro.cshtml
+++ b/site/Presentation/Views/Season/Intro.cshtml
@@ -28,8 +28,4 @@
 
 </div>
 
-<a class="book-link screen-action"
-		href="https://uiclap.bio/darakeon"
-		target="_blank">
-	&#x1F56E;
-</a>
+@await Html.PartialAsync("BuyBook", "")
