--- a/site/Presentation/Assets/css/screen_Main.css
+++ b/site/Presentation/Assets/css/screen_Main.css
@@ -47,21 +47,24 @@ form .paragraph
 	position: fixed;
 	bottom: 0;
 	right: 0;
-	width: 100px;
-	height: 70px;
 	background: #111;
 	border: 3px ridge #60C;
 	border-radius: 5px;
 	text-align: center;
 	filter: alpha(opacity=90);
 	opacity: 0.90;
-	font-family: wingdings;
 	color: #93F;
 	text-decoration: none;
-	font-size: 50px;
 	margin: 20px;
 	font-weight: 900;
+	font-size: 15px;
+	padding: 0 20px 10px 20px;
 }
+
+	.book-link span {
+		font-size: 50px;
+		display: block;
+	}
 
 .debug {
 	display: none;
