--- a/site/Presentation/Views/Season/Episode.cshtml
+++ b/site/Presentation/Views/Season/Episode.cshtml
@@ -228,5 +228,5 @@
 
 @if (Model.Story.Link != null)
 {
-	<a class="book-link screen-action" href="@Model.Story.Link" target="_blank">&#x1F56E;</a>
+	@await Html.PartialAsync("BuyBook", Model.Story.Link)
 }
