site: fix gramatic

--- a/site/Presentation/Views/Shared/Error.cshtml
+++ b/site/Presentation/Views/Shared/Error.cshtml
@@ -10,7 +10,7 @@
 <h2>Ops!</h2>
 
 <p>
-	Aconteceu um erro ao tentar acessar esta história.
+	Aconteceu um erro ao tentar acessar esta estória.
 </p>
 
 <p>
